osprey_worker/src/osprey/engine/query_language/tests/test_regex_match/test_regex_match_fails_with_invalid_regex.txt
error: failed to validate argument `regex` for `RegexMatch(...)`
--> main.sml:1:25
     |
   1 | RegexMatch(item=A, regex='[')
     |                          ^ error: unterminated character set at position 0